update workflow names

--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -1,6 +1,8 @@
-name: Build X86-64
+name: Build X86-64 master
 
 on:
+  #schedule:
+  #  - cron: 0 12 * * 6
   workflow_dispatch:
     inputs:
       zju_script:
