--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -19,6 +19,8 @@ jobs:
 
     - name: Checkout repo
       uses: actions/checkout@v3
+      with:
+        ref: main
 
     - name: Get source code
       uses: actions/checkout@v3
