--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -115,7 +115,7 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         echo "Using $(($(nproc)+1)) threads to compile..."
-        make -j $(($(nproc)+1)) download world
+        make download world -j $(($(nproc)+1)) || make download world -j1 V=s
         if [ ${{ inputs.zju_localize }}x != "No"x ]; then
           echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), with zju localization" >> $GITHUB_ENV
         else
