--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -69,7 +69,7 @@ jobs:
         sed -i 's/192\.168\.1\.1/192\.168\.13\.1/g' ./package/base-files/files/bin/config_generate
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt@${BUILD_DATE}/g" ./package/base-files/files/etc/openwrt_release
-        if [ ${{ inputs.zju_script }}x != "No"x ]; then
+        if [ ${{ inputs.zju_script }}x != "Nox" ]; then
           mkdir -p ./files/etc/uci-defaults/
           cp ${MAIN_PATH}/custom/zju_localize ./files/etc/uci-defaults/
           echo "Added script for zju."
@@ -112,7 +112,7 @@ jobs:
         cd ${OPENWRT_PATH}
         echo "Using $(($(nproc)+1)) threads to compile..."
         make download world -j $(($(nproc)+1)) || make download world -j1 V=s
-        if [ ${{ inputs.zju_localize }}x != "No"x ]; then
+        if [ ${{ inputs.zju_script }}x != "Nox" ]; then
           echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), with zju localization" >> $GITHUB_ENV
         else
           echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), without zju localization" >> $GITHUB_ENV
