--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -114,8 +114,8 @@ jobs:
         cp -r ./feeds/luci/modules/luci-base/src/ "po2lmo"
         pushd "po2lmo"
         make po2lmo
-        rm -rf "/usr/bin/po2lmo"
-        cp -fp "po2lmo" "/usr/bin/po2lmo"
+        sudo rm -rf "/usr/bin/po2lmo"
+        sudo cp -fp "po2lmo" "/usr/bin/po2lmo"
         popd
         echo "Using $(($(nproc)+1)) threads to compile..."
         make download world -j $(($(nproc)+1)) || make download world -j1 V=s
