--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
     - name: Initialize
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a
         sudo apt-get -y update
