--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -2,15 +2,6 @@ name: Build X86-64 master
 
 on:
   workflow_dispatch:
-    inputs:
-      zju_script:
-        description: "Whether to add zju localizing script"
-        required: true
-        default: "No"
-        type: choice
-        options:
-        - "Add"
-        - "No"
 
 jobs:
   build:
@@ -18,6 +9,8 @@ jobs:
 
     steps:
     - name: Initialize
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a
         sudo apt-get -y update
@@ -63,11 +56,6 @@ jobs:
         sed -i 's/192\.168\.1\.1/192\.168\.13\.1/g' ./package/base-files/files/bin/config_generate
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt@${BUILD_DATE}/g" ./package/base-files/files/etc/openwrt_release
-        if [ ${{ inputs.zju_script }}x != "Nox" ]; then
-          mkdir -p ./files/etc/uci-defaults/
-          cp ${MAIN_PATH}/custom/zju_localize ./files/etc/uci-defaults/
-          echo "Added script for zju."
-        fi
         picct=0
         for pic in ${MAIN_PATH}/custom/*.jpg; do
           picct=$(expr ${picct} + 1)
@@ -114,11 +102,7 @@ jobs:
         popd
         echo "Using $(($(nproc)+1)) threads to compile..."
         make download world -j $(($(nproc)+1)) || make download world -j1 V=s
-        if [ ${{ inputs.zju_script }}x != "Nox" ]; then
-          echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), with zju localization" >> $GITHUB_ENV
-        else
-          echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
-        fi
+        echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         du -h --max-depth=1
 
     - name: Delete old release
