--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -20,6 +20,8 @@ jobs:
 
     steps:
     - name: Initialize
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a
         sudo apt-get -y update
