--- a/.github/workflows/Build-X64-master.yml
+++ b/.github/workflows/Build-X64-master.yml
@@ -48,11 +48,12 @@ jobs:
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
           echo "dl cache restored."
         fi
-        du -h --max-depth=1
 
     - name: Customize
       run: |
         cd ${OPENWRT_PATH}
+        du -h --max-depth=1
+        sed -i 's/Os/O2/g' ./include/target.mk
         sed -i 's/192\.168\.1\.1/192\.168\.13\.1/g' ./package/base-files/files/bin/config_generate
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt@${BUILD_DATE}/g" ./package/base-files/files/etc/openwrt_release
