--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -59,11 +59,12 @@ jobs:
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
           echo "dl cache restored."
         fi
-        du -h --max-depth=1
 
     - name: Customize
       run: |
         cd ${OPENWRT_PATH}
+        du -h --max-depth=1
+        sed -i 's/Os/O2/g' ./include/target.mk
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         #wget -q https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/packages/Packages.gz
         #zgrep -m 1 "Depends: kernel (=.*)$" Packages.gz | sed 's/.*-\(.*\))/\1/' > .vermagic
