--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -1,4 +1,4 @@
-name: Build X86-64 master
+name: Build X86-64 23.05
 
 on:
   workflow_dispatch:
@@ -26,7 +26,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: immortalwrt/immortalwrt
-        ref: master
+        ref: openwrt-23.05
         path: 'openwrt'
 
     - name: Set path
@@ -41,7 +41,7 @@ jobs:
         cd ${OPENWRT_PATH}
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        wget -q https://github.com/${GITHUB_REPOSITORY}/releases/download/latest-x64-master/dl_cache.tar.zst || dlCacheState="notExist"
+        wget -q https://github.com/${GITHUB_REPOSITORY}/releases/download/latest-x64-23.05/dl_cache.tar.zst || dlCacheState="notExist"
         if [ ${dlCacheState}x = "notExist"x ]; then
           echo "dl cache does not exist."
         else
@@ -70,11 +70,11 @@ jobs:
     - name: Generate and update configs
       run: |
         cd ${OPENWRT_PATH}
-        cat ${MAIN_PATH}/configs/X64-master/myConfig > ./.config
+        cat ${MAIN_PATH}/configs/X64-23.05/myConfig > ./.config
         make defconfig
-        cp ./.config ${MAIN_PATH}/configs/X64-master/new_all_config
-        sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/X64-master/new_diff_config
-        cd ${MAIN_PATH}/configs/X64-master/
+        cp ./.config ${MAIN_PATH}/configs/X64-23.05/new_all_config
+        sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/X64-23.05/new_diff_config
+        cd ${MAIN_PATH}/configs/X64-23.05/
         if [ -n "$(diff -q new_all_config all_config)" ]; then
           rm -f all_config diff_config
           mv new_all_config all_config
@@ -82,8 +82,8 @@ jobs:
           cd ${MAIN_PATH}
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add ${MAIN_PATH}/configs/X64-master/all_config ${MAIN_PATH}/configs/X64-master/diff_config
-          git commit -m "Update X64-master config files"
+          git add ${MAIN_PATH}/configs/X64-23.05/all_config ${MAIN_PATH}/configs/X64-23.05/diff_config
+          git commit -m "Update X64-23.05 config files"
           git push origin main
           echo "New configs commited."
         else
@@ -103,7 +103,7 @@ jobs:
         popd
         echo "Using $(($(nproc)+1)) threads to compile..."
         make download world -j $(($(nproc)+1)) || make download world -j1 V=s
-        echo "RELEASE_BODY=Master firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
+        echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         du -h --max-depth=1
 
     - name: Delete old release
@@ -111,7 +111,7 @@ jobs:
       uses: dev-drprasad/delete-tag-and-release@v0.2.1
       with:
         delete_release: true
-        tag_name: latest-x64-master
+        tag_name: latest-x64-23.05
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -131,7 +131,7 @@ jobs:
     - name: Upload to Releases
       uses: ncipollo/release-action@v1
       with:
-        name: latest master x64 firmware
-        tag: latest-x64-master
+        name: latest 23.05 x64 firmware
+        tag: latest-x64-23.05
         artifacts: ${{ env.RELEASES_PATH }}/*
         body: ${{ env.RELEASE_BODY }}
