--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -47,17 +47,6 @@ jobs:
         echo "OPENWRT_PATH=$(pwd)/openwrt" >> $GITHUB_ENV
         echo "RELEASES_PATH=$(pwd)/releases" >> $GITHUB_ENV
 
-    - name: Update xl2tpd
-      run: |
-        cd ${MAIN_PATH}
-        wget -O ./xl2tpd1.patch https://github.com/immortalwrt/packages/commit/be95ccbc8c0eea9a8e27e813bf0c5c4119ebde09.patch
-        wget -O ./xl2tpd2.patch https://github.com/immortalwrt/packages/commit/a111405eac397f4a48492e9d710cea3aeb9092c3.patch
-        cd ${OPENWRT_PATH}
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git am ../xl2tpd1.patch
-        git am ../xl2tpd2.patch
-
     - name: Get feeds and dl
       run: |
         cd ${OPENWRT_PATH}
@@ -70,6 +59,17 @@ jobs:
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
           echo "dl cache restored."
         fi
+
+    - name: Update xl2tpd
+      run: |
+        cd ${MAIN_PATH}
+        wget -O ./xl2tpd1.patch https://github.com/immortalwrt/packages/commit/be95ccbc8c0eea9a8e27e813bf0c5c4119ebde09.patch
+        wget -O ./xl2tpd2.patch https://github.com/immortalwrt/packages/commit/a111405eac397f4a48492e9d710cea3aeb9092c3.patch
+        cd ${OPENWRT_PATH}/feeds/packages
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git am ${MAIN_PATH}/xl2tpd1.patch
+        git am ${MAIN_PATH}/xl2tpd2.patch
 
     - name: Customize
       run: |
