--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -1,8 +1,6 @@
 name: Build RM-AC2100 22.03
 
 on:
-  #schedule:
-  #  - cron: 0 8 * * 6
   workflow_dispatch:
 
 jobs:
@@ -31,12 +29,14 @@ jobs:
         ref: openwrt-22.03
         path: 'openwrt'
 
-    - name: Set path
+    - name: Set environment
       run: |
         mkdir -p releases artifacts
         echo "MAIN_PATH=$(pwd)" >> $GITHUB_ENV
         echo "OPENWRT_PATH=$(pwd)/openwrt" >> $GITHUB_ENV
         echo "RELEASES_PATH=$(pwd)/releases" >> $GITHUB_ENV
+        git config --global user.name "Github Actions"
+        git config --global user.email "github-actions@users.noreply.github.com"
 
     - name: Get feeds and dl
       run: |
@@ -74,8 +74,6 @@ jobs:
           mv new_all_config all_config
           mv new_diff_config diff_config
           cd ${MAIN_PATH}
-          git config user.name github-actions
-          git config user.email github-actions@github.com
           git add ${MAIN_PATH}/configs/RM21-22.03/all_config ${MAIN_PATH}/configs/RM21-22.03/diff_config
           git commit -m "Update RM21-22.03 config files"
           git push origin main
