--- a/.github/workflows/Build-X64-21.02.yml
+++ b/.github/workflows/Build-X64-21.02.yml
@@ -35,8 +35,8 @@ jobs:
         echo "MAIN_PATH=$(pwd)" >> $GITHUB_ENV
         echo "OPENWRT_PATH=$(pwd)/openwrt" >> $GITHUB_ENV
         echo "RELEASES_PATH=$(pwd)/releases" >> $GITHUB_ENV
-        git config --global user.name "Github Actions"
-        git config --global user.email "github-actions@users.noreply.github.com"
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@github.com"
 
     - name: Get feeds and dl
       run: |
