--- a/.github/workflows/Build-X64-21.02.yml
+++ b/.github/workflows/Build-X64-21.02.yml
@@ -63,7 +63,9 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         du -h --max-depth=1
+        # Change default cflags
         sed -i 's/Os/O2/g' ./include/target.mk
+        # default lan ip
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         #wget -q https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/packages/Packages.gz
         #zgrep -m 1 "Depends: kernel (=.*)$" Packages.gz | sed 's/.*-\(.*\))/\1/' > .vermagic
