--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -2,7 +2,7 @@ name: Build X86-64 23.05
 
 on:
   schedule:
-    - cron: 0 12 * * 2
+    - cron: 0 5 * * 4
   workflow_dispatch:
 
 jobs:
@@ -68,8 +68,11 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         du -h --max-depth=1
+        # Change default cflags
         sed -i 's/Os/O2/g' ./include/target.mk
+        # VERSION_CODE_FILENAMES
         sed -i '269s/y/n/' ./package/base-files/image-config.in
+        # default lan ip
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         picct=0
         for pic in ${MAIN_PATH}/custom/*.jpg; do
