--- a/.github/workflows/Build-X64-21.02.yml
+++ b/.github/workflows/Build-X64-21.02.yml
@@ -13,6 +13,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a
+        sudo rm -f /mnt/swapfile
         sudo apt-get -y update
         sudo apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache clang clangd cmake curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc-s1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig tar time uglifyjs unzip wget xsltproc zlib1g-dev zstd
         sudo apt-get -y clean
