--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Customize
       run: |
         # Use built latest AdGuardHome
-        mkdir -p ${OPENWRT_PATH}/files/
+        mkdir -p ${OPENWRT_PATH}/files/etc/init.d/ ${OPENWRT_PATH}/files/usr/bin/
         wget -q -O adgh.tar.gz "https://github.com/AdguardTeam/AdGuardHome/releases/latest/download/AdGuardHome_linux_amd64.tar.gz"
         tar -xzf adgh.tar.gz
         mv ./AdGuardHome/AdGuardHome ${OPENWRT_PATH}/files/usr/bin/AdGuardHome
