--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -2,7 +2,7 @@ name: Build X86-64 23.05
 
 on:
   schedule:
-    - cron: 0 6 * * 1
+    - cron: 0 8 * * 3
   workflow_dispatch:
 
 jobs:
@@ -85,7 +85,7 @@ jobs:
         # Change default cflags
         sed -i 's/Os/O2/g' ./include/target.mk
         # VERSION_CODE_FILENAMES
-        sed -i '269s/y/n/' ./package/base-files/image-config.in
+        sed -i '269s/default y/default n/' ./package/base-files/image-config.in
         # default lan ip
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         # busybox options: unlink, tree
