--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -2,7 +2,7 @@ name: Build X86-64 23.05
 
 on:
   schedule:
-    - cron: 0 11 * * 0
+    - cron: 0 9 * * 2
   workflow_dispatch:
 
 jobs:
@@ -66,10 +66,16 @@ jobs:
     - name: Apply patches
       continue-on-error: true
       run: |
+        cd ${OPENWRT_PATH}/feeds/packages
+        mkdir -p ./lang/golang/golang/patches
+        cat ${MAIN_PATH}/patches/Go_Fix-parse-timezone.patch > ./lang/golang/golang/patches/0001-fix-parse-timezone-on-OpenWrt.patch
         # Add compilation date
         cd ${OPENWRT_PATH}/feeds/luci
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
+        # Update passwall
+        wget -q -O ${MAIN_PATH}/patches/uppasswall.patch "https://github.com/immortalwrt/luci/commit/6248f031490c1430fc7faafbfa93eb56ebf47d21.patch"
+        git am ${MAIN_PATH}/patches/uppasswall.patch
 
     - name: Customize
       run: |
