--- a/.github/workflows/Build-X64-23.05.yml
+++ b/.github/workflows/Build-X64-23.05.yml
@@ -2,7 +2,7 @@ name: Build X86-64 23.05
 
 on:
   schedule:
-    - cron: 0 9 * * 2
+    - cron: 0 9 * * 0
   workflow_dispatch:
 
 jobs:
@@ -73,20 +73,17 @@ jobs:
         cd ${OPENWRT_PATH}/feeds/luci
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
-        # Update passwall
-        wget -q -O ${MAIN_PATH}/patches/uppasswall.patch "https://github.com/immortalwrt/luci/commit/6248f031490c1430fc7faafbfa93eb56ebf47d21.patch"
-        git am ${MAIN_PATH}/patches/uppasswall.patch
 
     - name: Customize
       run: |
         # Use built latest AdGuardHome
-        mkdir -p ${OPENWRT_PATH}/files/etc/init.d/ ${OPENWRT_PATH}/files/usr/bin/
-        wget -q -O adgh.tar.gz "https://github.com/AdguardTeam/AdGuardHome/releases/latest/download/AdGuardHome_linux_amd64.tar.gz"
-        tar -xzf adgh.tar.gz
-        mv ./AdGuardHome/AdGuardHome ${OPENWRT_PATH}/files/usr/bin/AdGuardHome
-        rm -rf ./adgh.tar.gz ./AdGuardHome
-        mv ${MAIN_PATH}/custom/adghinit ${OPENWRT_PATH}/files/etc/init.d/adguardhome
-        sudo chmod 755 ${OPENWRT_PATH}/files/usr/bin/AdGuardHome ${OPENWRT_PATH}/files/etc/init.d/adguardhome
+        #mkdir -p ${OPENWRT_PATH}/files/etc/init.d/ ${OPENWRT_PATH}/files/usr/bin/
+        #wget -q -O adgh.tar.gz "https://github.com/AdguardTeam/AdGuardHome/releases/latest/download/AdGuardHome_linux_amd64.tar.gz"
+        #tar -xzf adgh.tar.gz
+        #mv ./AdGuardHome/AdGuardHome ${OPENWRT_PATH}/files/usr/bin/AdGuardHome
+        #rm -rf ./adgh.tar.gz ./AdGuardHome
+        #mv ${MAIN_PATH}/custom/adghinit ${OPENWRT_PATH}/files/etc/init.d/adguardhome
+        #sudo chmod 755 ${OPENWRT_PATH}/files/usr/bin/AdGuardHome ${OPENWRT_PATH}/files/etc/init.d/adguardhome
         cd ${OPENWRT_PATH}
         # Change default cflags
         sed -i 's/Os/O2/g' ./include/target.mk
