--- a/.github/workflows/Build-X64-23.05-homeproxy.yml
+++ b/.github/workflows/Build-X64-23.05-homeproxy.yml
@@ -1,4 +1,4 @@
-name: Build X86-64 23.05 with passwall2
+name: Build X86-64 23.05 with homeproxy
 
 on:
   workflow_dispatch:
@@ -39,13 +39,6 @@ jobs:
         ref: openwrt-23.05
         path: 'openwrt'
 
-    - name: Get passwall2 source
-      uses: actions/checkout@v4
-      with:
-        repository: xiaorouji/openwrt-passwall2
-        ref: main
-        path: 'passwall2'
-
     - name: Set environment
       run: |
         mkdir -p releases artifacts
@@ -59,6 +52,7 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         ./scripts/feeds update -a
+        ./scripts/feeds install -a
         wget -q https://github.com/${GITHUB_REPOSITORY}/releases/download/latest-x64-23.05/dl_cache.tar.zst || dlCacheState="notExist"
         if [ ${dlCacheState}x = "notExist"x ]; then
           echo "dl cache does not exist."
@@ -74,14 +68,9 @@ jobs:
         cd ${OPENWRT_PATH}/feeds/luci
         sed -i "s/BUILD_DATE/$(date -d "8 hour" -u +%Y-%m-%d)/" ${MAIN_PATH}/patches/Add-compilation-date.patch
         git am ${MAIN_PATH}/patches/Add-compilation-date.patch
-        # Update passwall2 Makefile
-        cd ${MAIN_PATH}/passwall2
-        git am ${MAIN_PATH}/patches/Passwall2-Makefile.patch
 
     - name: Customize
       run: |
-        # Add passwall2
-        mv ${MAIN_PATH}/passwall2/luci-app-passwall2 ${OPENWRT_PATH}/feeds/luci/applications/
         cd ${OPENWRT_PATH}
         # Change default cflags
         sed -i 's/Os/O2/g' ./include/target.mk
@@ -101,24 +90,22 @@ jobs:
         echo "Using No.${tgtpic} pic as default argon background."
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
         cp ${MAIN_PATH}/custom/${tgtpic}.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
 
     - name: Generate and update configs
       run: |
         cd ${OPENWRT_PATH}
-        cat ${MAIN_PATH}/configs/psw2/myConfig > ./.config
+        cat ${MAIN_PATH}/configs/hp/myConfig > ./.config
         make defconfig
-        cp ./.config ${MAIN_PATH}/configs/psw2/new_all_config
-        sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/psw2/new_diff_config
-        cd ${MAIN_PATH}/configs/psw2/
+        cp ./.config ${MAIN_PATH}/configs/hp/new_all_config
+        sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/hp/new_diff_config
+        cd ${MAIN_PATH}/configs/hp/
         if [ -n "$(diff -q new_all_config all_config)" ]; then
           rm -f all_config diff_config
           mv new_all_config all_config
           mv new_diff_config diff_config
           cd ${MAIN_PATH}
-          git add ${MAIN_PATH}/configs/psw2/all_config ${MAIN_PATH}/configs/psw2/diff_config
-          git commit -m "Update X64-23.05-psw2 config files"
+          git add ${MAIN_PATH}/configs/hp/all_config ${MAIN_PATH}/configs/hp/diff_config
+          git commit -m "Update X64-23.05-homeproxy config files"
           git push origin main
           echo "New configs commited."
         else
@@ -138,7 +125,7 @@ jobs:
       uses: dev-drprasad/delete-tag-and-release@v0.2.1
       with:
         delete_release: true
-        tag_name: latest-x64-23.05-psw2
+        tag_name: latest-x64-23.05-hp
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -156,7 +143,7 @@ jobs:
     - name: Upload to Releases
       uses: ncipollo/release-action@v1
       with:
-        name: latest 23.05 x64 with passwall2 firmware
-        tag: latest-x64-23.05-psw2
+        name: latest 23.05 x64 with homeproxy firmware
+        tag: latest-x64-23.05-hp
         artifacts: ${{ env.RELEASES_PATH }}/*
         body: ${{ env.RELEASE_BODY }}
